# crab_os

./: Cargo.toml  flake.nix  readme.md
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
