[package]
name = "crab_os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"

[[bin]]
name = "crab_os"
test = false
bench = false
